--- a/Auto_Analysis.ipynb
+++ b/Auto_Analysis.ipynb
@@ -1343,115 +1343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "2b78dd43",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coef</th>\n",
-       "      <th>std err</th>\n",
-       "      <th>t</th>\n",
-       "      <th>P&gt;|t|</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>intercept</th>\n",
-       "      <td>-17.2184</td>\n",
-       "      <td>4.644</td>\n",
-       "      <td>-3.707</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cylinders</th>\n",
-       "      <td>-0.4934</td>\n",
-       "      <td>0.323</td>\n",
-       "      <td>-1.526</td>\n",
-       "      <td>0.128</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>displacement</th>\n",
-       "      <td>0.0199</td>\n",
-       "      <td>0.008</td>\n",
-       "      <td>2.647</td>\n",
-       "      <td>0.008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>horsepower</th>\n",
-       "      <td>-0.0170</td>\n",
-       "      <td>0.014</td>\n",
-       "      <td>-1.230</td>\n",
-       "      <td>0.220</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>weight</th>\n",
-       "      <td>-0.0065</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>-9.929</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>acceleration</th>\n",
-       "      <td>0.0806</td>\n",
-       "      <td>0.099</td>\n",
-       "      <td>0.815</td>\n",
-       "      <td>0.415</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>year</th>\n",
-       "      <td>0.7508</td>\n",
-       "      <td>0.051</td>\n",
-       "      <td>14.729</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>origin</th>\n",
-       "      <td>1.4261</td>\n",
-       "      <td>0.278</td>\n",
-       "      <td>5.127</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 coef  std err       t  P>|t|\n",
-       "intercept    -17.2184    4.644  -3.707  0.000\n",
-       "cylinders     -0.4934    0.323  -1.526  0.128\n",
-       "displacement   0.0199    0.008   2.647  0.008\n",
-       "horsepower    -0.0170    0.014  -1.230  0.220\n",
-       "weight        -0.0065    0.001  -9.929  0.000\n",
-       "acceleration   0.0806    0.099   0.815  0.415\n",
-       "year           0.7508    0.051  14.729  0.000\n",
-       "origin         1.4261    0.278   5.127  0.000"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'as_file' from 'importlib.resources' (/Users/twist/opt/anaconda3/lib/python3.8/importlib/resources.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Include all predictors for mpg besides name\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mISLP\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (ModelSpec \u001b[38;5;28;01mas\u001b[39;00m MS, summarize, poly)\n\u001b[1;32m      3\u001b[0m y \u001b[38;5;241m=\u001b[39m auto[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmpg\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m terms \u001b[38;5;241m=\u001b[39m auto\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmpg\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "File \u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/ISLP/__init__.py:10\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpath\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m join \u001b[38;5;28;01mas\u001b[39;00m pjoin\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\u001b[38;5;241m,\u001b[39m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimportlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mresources\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (as_file,\n\u001b[1;32m     11\u001b[0m                                  files)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# data originally saved via: [sm.datasets.get_rdataset(n, 'ISLR').data.to_csv('../ISLP/data/%s.csv' % n, index=False) for n in ['Carseats', 'College', 'Credit', 'Default', 'Hitters', 'Auto', 'OJ', 'Portfolio', 'Smarket', 'Wage', 'Weekly', 'Caravan']]\u001b[39;00m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_data\u001b[39m(dataset):\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'as_file' from 'importlib.resources' (/Users/twist/opt/anaconda3/lib/python3.8/importlib/resources.py)"
+     ]
     }
    ],
    "source": [
@@ -2564,7 +2472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
